unpackaged/main/default/objects/Knowledge__kav/fields/Exhibitor_Manual_Full_Key_Words__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Manual_Full_Key_Words__c</fullName>
    <inlineHelpText>These key words are used to enhance search. Utilize terms that are NOT found in the text of this article.</inlineHelpText>
    <label>Key Words</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>