unpackaged/main/default/objects/Knowledge__kav/fields/Exhibitor_Manual_Full_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Manual_Full_Project_Number__c</fullName>
    <description>Exhibitor manual project #</description>
    <label>Project Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>