unpackaged/main/default/objects/Knowledge__kav/fields/Exhibitor_Manual_Full_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Manual_Full_Show_Name__c</fullName>
    <label>Show Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>