unpackaged/main/default/objects/Knowledge__kav/fields/Exhibitor_Manual_Section_Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Manual_Section_Archive_Date__c</fullName>
    <inlineHelpText>This will be automatically set 45 days from the publish date, unless otherwise specified.</inlineHelpText>
    <label>Archive Date</label>
    <type>Date</type>
</CustomField>