unpackaged/main/default/objects/Knowledge__kav/fields/Exhibitor_Manual_Section_Exceptions_Sp82__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Manual_Section_Exceptions_Sp82__c</fullName>
    <label>Exceptions / Special Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>