unpackaged/main/default/objects/Knowledge__kav/fields/Exhibitor_Manual_Section_File_External28__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Manual_Section_File_External28__c</fullName>
    <description>Url to kit</description>
    <label>Link to Manual Section</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>