unpackaged/main/default/objects/Knowledge__kav/fields/Exhibitor_Manual_Section_Show_Open__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Manual_Section_Show_Open__c</fullName>
    <label>Show Open</label>
    <type>Date</type>
</CustomField>