unpackaged/main/default/objects/Knowledge__kav/fields/Exhibitor_Manual_Section_Type__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Manual_Section_Type__c</fullName>
    <description>Highest level - bookmark in the exhibitor manual</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>