unpackaged/main/default/objects/Knowledge__kav/fields/Know_Your_Show_Booth_Packages__c.field-meta.xml
<CustomField>
    <fullName>Know_Your_Show_Booth_Packages__c</fullName>
    <label>Booth Packages</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>