unpackaged/main/default/objects/Knowledge__kav/fields/Know_Your_Show_Booth_Ranges_Halls__c.field-meta.xml
<CustomField>
    <fullName>Know_Your_Show_Booth_Ranges_Halls__c</fullName>
    <label>Booth Ranges/Halls</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>