unpackaged/main/default/objects/Knowledge__kav/fields/Know_Your_Show_Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Know_Your_Show_Current_Owner__c</fullName>
    <label>Current Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>