unpackaged/main/default/objects/Knowledge__kav/fields/Know_Your_Show_Last_Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>Know_Your_Show_Last_Revision_Date__c</fullName>
    <label>Last Revision Date</label>
    <type>Date</type>
</CustomField>