unpackaged/main/default/objects/Knowledge__kav/fields/Know_Your_Show_Show_ID__c.field-meta.xml
<CustomField>
    <fullName>Know_Your_Show_Show_ID__c</fullName>
    <label>Occurence ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>