unpackaged/main/default/objects/Knowledge__kav/fields/Know_Your_Show_Show_Open__c.field-meta.xml
<CustomField>
    <fullName>Know_Your_Show_Show_Open__c</fullName>
    <label>Show Open</label>
    <type>Date</type>
</CustomField>