unpackaged/main/default/objects/Knowledge__kav/fields/Know_Your_Show_Unique_Show_Details__c.field-meta.xml
<CustomField>
    <fullName>Know_Your_Show_Unique_Show_Details__c</fullName>
    <label>Unique Show Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>