unpackaged/main/default/objects/Knowledge__kav/fields/Know_Your_Show_Utility_Services__c.field-meta.xml
<CustomField>
    <fullName>Know_Your_Show_Utility_Services__c</fullName>
    <label>Utility Services</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>