unpackaged/main/default/objects/Knowledge__kav/fields/Leadership_Team_Policy_Procedure_Key_W84__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Team_Policy_Procedure_Key_W84__c</fullName>
    <label>Key Words</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>