unpackaged/main/default/objects/Knowledge__kav/fields/Leadership_Team_Policy_Procedure_Purp102__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Team_Policy_Procedure_Purp102__c</fullName>
    <label>Purpose</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>