unpackaged/main/default/objects/Knowledge__kav/fields/Leadership_Team_Policy_Procedure_Revi100__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Team_Policy_Procedure_Revi100__c</fullName>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>