unpackaged/main/default/objects/Knowledge__kav/fields/Leadership_Team_Policy_Procedure_Revie20__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Team_Policy_Procedure_Revie20__c</fullName>
    <label>Reviewed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>