unpackaged/main/default/objects/Knowledge__kav/fields/Photo_Exceptions_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Photo_Exceptions_Special_Instructions__c</fullName>
    <label>Exceptions / Special Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>