unpackaged/main/default/objects/Knowledge__kav/fields/Photo_How_is_it_used__c.field-meta.xml
<CustomField>
    <fullName>Photo_How_is_it_used__c</fullName>
    <label>How is it used</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>