unpackaged/main/default/objects/Knowledge__kav/fields/Photo_Published_By__c.field-meta.xml
<CustomField>
    <fullName>Photo_Published_By__c</fullName>
    <label>Published By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>