unpackaged/main/default/objects/Knowledge__kav/fields/Photo_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Photo_Reviewed_By__c</fullName>
    <label>Reviewed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>