unpackaged/main/default/objects/Knowledge__kav/fields/Policy_and_Procedure_Exceptions_Specia71__c.field-meta.xml
<CustomField>
    <fullName>Policy_and_Procedure_Exceptions_Specia71__c</fullName>
    <label>Exceptions / Special Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>