unpackaged/main/default/objects/Knowledge__kav/fields/Policy_and_Procedure_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Policy_and_Procedure_Purpose__c</fullName>
    <label>Purpose</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>