unpackaged/main/default/objects/Knowledge__kav/fields/Policy_and_Procedure_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_and_Procedure_Review_Date__c</fullName>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>