unpackaged/main/default/objects/Knowledge__kav/fields/Show_Process_Update_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Show_Process_Update_Approved_By__c</fullName>
    <label>Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>