unpackaged/main/default/objects/Knowledge__kav/fields/Show_Process_Update_Exceptions_Special31__c.field-meta.xml
<CustomField>
    <fullName>Show_Process_Update_Exceptions_Special31__c</fullName>
    <label>Exceptions / Special Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>