unpackaged/main/default/objects/Knowledge__kav/fields/Show_Process_Update_Process__c.field-meta.xml
<CustomField>
    <fullName>Show_Process_Update_Process__c</fullName>
    <label>Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>