unpackaged/main/default/objects/Knowledge__kav/fields/Show_Process_Update_Related_Links__c.field-meta.xml
<CustomField>
    <fullName>Show_Process_Update_Related_Links__c</fullName>
    <label>Related Links</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>