unpackaged/main/default/objects/Knowledge__kav/fields/Show_Process_Update_Revision__c.field-meta.xml
<CustomField>
    <fullName>Show_Process_Update_Revision__c</fullName>
    <label>Revision #</label>
    <length>5</length>
    <type>Text</type>
</CustomField>