unpackaged/main/default/objects/Knowledge__kav/fields/Show_Process_Update_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Process_Update_Show_Name__c</fullName>
    <label>Show Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>