unpackaged/main/default/objects/Knowledge__kav/fields/Show_Process_Update_Used_By__c.field-meta.xml
<CustomField>
    <fullName>Show_Process_Update_Used_By__c</fullName>
    <label>Used By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Departments</fullName>
            </value>
            <value>
                <fullName>Archivist</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>Inbound NSC – Chat</fullName>
            </value>
            <value>
                <fullName>Inbound NSC - Phones</fullName>
            </value>
            <value>
                <fullName>Kit Admin</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Order Entry</fullName>
            </value>
            <value>
                <fullName>Outbound NSC</fullName>
            </value>
            <value>
                <fullName>Resolutions</fullName>
            </value>
            <value>
                <fullName>Support Desk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>