unpackaged/main/default/objects/Knowledge__kav/fields/Things_to_Remember__c.field-meta.xml
<CustomField>
    <fullName>Things_to_Remember__c</fullName>
    <label>Things to Remember</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>