unpackaged/main/default/objects/Knowledge__kav/recordTypes/Europe.recordType-meta.xml
<RecordType>
    <fullName>Europe</fullName>
    <active>true</active>
    <label>Europe</label>
</RecordType>