unpackaged/main/default/objects/Knowledge__kav/recordTypes/Exhibitor_Manual_Full.recordType-meta.xml
<RecordType>
    <fullName>Exhibitor_Manual_Full</fullName>
    <active>true</active>
    <label>Exhibitor_Manual_Full</label>
</RecordType>