unpackaged/main/default/objects/Knowledge__kav/recordTypes/Exhibitor_Manual_Section.recordType-meta.xml
<RecordType>
    <fullName>Exhibitor_Manual_Section</fullName>
    <active>true</active>
    <label>Exhibitor_Manual_Section</label>
</RecordType>