unpackaged/main/default/objects/Knowledge__kav/recordTypes/Know_Your_Show.recordType-meta.xml
<RecordType>
    <fullName>Know_Your_Show</fullName>
    <active>true</active>
    <label>Know_Your_Show</label>
</RecordType>