unpackaged/main/default/objects/Knowledge__kav/recordTypes/Leadership_Team_Policy_Procedure.recordType-meta.xml
<RecordType>
    <fullName>Leadership_Team_Policy_Procedure</fullName>
    <active>true</active>
    <label>Leadership_Team_Policy_Procedure</label>
</RecordType>