unpackaged/main/default/objects/Knowledge__kav/recordTypes/Photo.recordType-meta.xml
<RecordType>
    <fullName>Photo</fullName>
    <active>true</active>
    <label>Photo</label>
</RecordType>