unpackaged/main/default/objects/Knowledge__kav/recordTypes/Policy_and_Procedure.recordType-meta.xml
<RecordType>
    <fullName>Policy_and_Procedure</fullName>
    <active>true</active>
    <label>Policy_and_Procedure</label>
</RecordType>