unpackaged/main/default/objects/Knowledge__kav/recordTypes/Show_Process_Update.recordType-meta.xml
<RecordType>
    <fullName>Show_Process_Update</fullName>
    <active>true</active>
    <label>Show_Process_Update</label>
</RecordType>